@@ -39,7 +39,19 @@
     </modules>
     <build>
         <pluginManagement>
+
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12</version>
+                    <configuration>
+                        <junitArtifactName>junit:junit</junitArtifactName>
+                        <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                            -Dfile.encoding=UTF-8</argLine>
+                    </configuration>
+                </plugin>
+
                 <plugin>
                     <groupId>com.heroku.sdk</groupId>
                     <artifactId>heroku-maven-plugin</artifactId>
@@ -67,6 +79,8 @@
                     <configuration>
                         <source>1.7</source>
                         <target>1.7</target>
+                        <verbose>true</verbose>
+                        <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
 
